test/libyul/yulSyntaxTests/number_literal_4.yul
{ let x:u256 := 67.235:u256 }
// ----
// ParserError 4828: (16-22): Invalid number literal.
